Set display to flex in the modal class to make it a container and set gap and padding to 15px to ensure there is equal space on either side of the icon

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  gap: 15px;
+  padding: 15px;
 }
 
 .icon {
@@ -33,6 +36,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  min-width: 50px;
 }
 
 .close-button {
@@ -67,3 +71,5 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+
